--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -37,7 +37,7 @@
     "description": "The description of the application"
   },
   "appName": {
-    "message": "MetaMask",
+    "message": "Argent Connect",
     "description": "The name of the application"
   },
   "approved": {
